--- a/Class_work_1_19_21/.project
+++ b/Class_work_1_19_21/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>Class_work_1_19_21</name>
+	<name>Vehicle_Inheritance</name>
 	<comment></comment>
 	<projects>
 	</projects>
